@@ -1,3 +1,7 @@
+20130913 - fhabermann
+* added js to print content on open print window
+* added show content action with template
+
 20130820 - fhabermann
 * saving memberships
 
